--- a/src/scss/mixin/_selector.scss
+++ b/src/scss/mixin/_selector.scss
@@ -32,6 +32,21 @@
   }
 }
 
+@mixin vhidden() {
+  &:not(:focus):not(:active) {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
+}
+
 @function add-selector-list-suffix($selector-list, $suffix) {
   $selector-counter: 0;
   $selector-string: "";
